hir/src/passes/snapshots/transmute_hir__passes__resolver__tests__access_unqualified_struct.snap
---
source: hir/src/passes/resolver.rs
expression: "UnresolvedHir ::\nfrom(compilation_unit.into_ast().unwrap()).resolve(Natives :: new())"
---
Err(
    Diagnostics {
        diagnostics: [
            Diagnostic {
                message: "Identifier 'S' not found",
                span: 5:18; [74, 75],
                level: Error,
            },
        ],
        inputs: (),
    },
)
